--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,7 +26,7 @@ p {
 
 button,
 input {
-  background-color: f0f0f0;
+  background-color: #f0f0f0;
   padding: 0.5rem 1rem;
   border-radius: 10rem;
   border: none;
