--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,11 +21,12 @@ h1 {
 }
 
 p {
-  margin-top: 0.5rem;
+  margin: 0.5rem 0.5rem 0 0.5rem;
 }
 
 button,
-input {
+input,
+svg {
   background-color: #f0f0f0;
   padding: 0.5rem 1rem;
   border-radius: 10rem;
