--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  padding-bottom: 5rem;
 }
 
 .App-header {
@@ -33,6 +29,7 @@ svg {
   border: none;
   font-weight: bold;
   text-align: center;
+  margin: 0 0.25rem;
 }
 
 /* theme */
